# marnwick

./: .gitignore  README.md  bandit.yaml  pyproject.toml  setup.ps1  setup.sh  start.sh
src/marnwick/: __init__.py  __main__.py  app_icon.py  async_utils.py  catalog.py  config.py  debug.py  folder_icon.py  gpu_test.py  image_ops.py  indexer.py  lama.py  lama_worker.py  models.py  navigation.py  safe_image.py  ui.py  workspace.py
src/marnwick/assets/: __init__.py
tests/: test_app_icon.py  test_async_utils.py  test_catalog.py  test_config.py  test_debug_responsiveness.py  test_gpu_test.py  test_image_ops.py  test_indexer.py  test_lama.py  test_lama_ui.py  test_lama_worker.py  test_navigation.py  test_ui.py  test_workspace.py
tools/: drive_debug_catalog.py  generate_test_catalog.py
