[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marnwick"
version = "0.1.0"
description = "A fast, portable photo viewer and organizer for catalog-based workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10",
  "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
  "pip-tools>=7",
  "pytest>=8",
]

[project.scripts]
marnwick = "marnwick.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
marnwick = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
