[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marnwick"
version = "0.1.0"
description = "A fast, portable photo viewer and organizer for catalog-based workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10",
  "PySide6>=6.6",
]

[project.optional-dependencies]
cpu = [
  "onnxruntime>=1.24.4",
]
directml = [
  "onnxruntime-directml>=1.20; platform_system == 'Windows' and platform_machine == 'AMD64'",
]
dev = [
  "pip-tools>=7",
  "pytest>=8",
]
nvidia = [
  "onnxruntime-gpu>=1.24.4; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
webgpu = [
  "onnxruntime-ep-webgpu>=0.1.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
]

[project.scripts]
marnwick = "marnwick.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
marnwick = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
